# AGAR

./: .gitignore  CMakeLists.txt  Makefile  README.md  align.py  align2.py  build.py  extractLocus.py  getUniqueTranscriptome.py  gff2ec.py  transHISAT2.py
cmake/: hisat2.cmake  htslib.cmake
misc/gtexcor/: CMakeLists.txt  README.md
misc/gtexcor/notebooks/.ipynb_checkpoints/: get_multimapper_loci-checkpoint.ipynb
misc/gtexcor/src/: Multimap.hh  gtexcor.cpp
notebooks/: exploreEC.ipynb  gff2ec.ipynb  test.gff  test2.gff  test3.gff
notebooks/.ipynb_checkpoints/: exploreEC-checkpoint.ipynb  gff2ec-checkpoint.ipynb
src/: Comparator.cpp  Comparator.h  Converter.cpp  Converter.h  GTFToFasta.cpp  GTFToFasta.h  GTFToFasta_salmon.cpp  GTFToFasta_salmon.h  Indexer.cpp  Indexer.h  Multimap.hh  agar.cpp  agar_diff.cpp  arg_parse.cpp  arg_parse.h  map2gff.cpp  map2gff.h  map2gff_11032019.cpp  map2gff_salmon.cpp  map2gff_salmon.h  salmon2genome.cpp  trans2genome.cpp
